--- a/src/TeamPage.css
+++ b/src/TeamPage.css
@@ -59,7 +59,7 @@
 }
 
 /* Modal Styles */
-.modal {
+.team-modal {
     background-color: white;
     padding: 2rem;
     border-radius: 8px;
@@ -69,7 +69,7 @@
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
 }
 
-.modal-overlay {
+.team-modal-overlay {
     background-color: rgba(0, 0, 0, 0.5);
     position: fixed;
     top: 0;
@@ -81,20 +81,20 @@
     justify-content: center;
 }
 
-.modal-image {
+.team-modal-image {
     width: 150px;
     height: 150px;
     border-radius: 50%;
     margin-bottom: 1rem;
 }
 
-.modal-designation {
+.team-modal-designation {
     font-size: 1.1rem;
     color: #666;
     margin-bottom: 1rem;
 }
 
-.close-button {
+.team-close-button {
     background-color: #007BFF;
     color: white;
     padding: 0.5rem 1rem;
@@ -104,7 +104,7 @@
     margin-top: 1.5rem;
 }
 
-    .close-button:hover {
+    .team-close-button:hover {
         background-color: #0056b3;
     }
 
